// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-component component parameter 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/MDX": Object {
      "attributes": Object {
        "component": Object {
          "Button": "Button",
        },
        "title": "Storybook/MDX",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-component.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Meta } from '@storybook/addon-docs/blocks';
import { Button } from './Button';
<Meta title=\\"Storybook/MDX\\" component={Button} />
      ",
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {},
}
`;

exports[`mdx-component named alias import 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/MDX": Object {
      "attributes": Object {
        "component": Object {
          "Button": "Button",
        },
        "title": "Storybook/MDX",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-component.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Meta } from '@storybook/addon-docs/blocks';
import { Btn as Button } from './Button';
<Meta title=\\"Storybook/MDX\\" component={Button} />
      ",
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {},
}
`;

exports[`mdx-component story import 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/MDX": Object {
      "attributes": Object {
        "component": Object {
          "Button": "Button",
        },
        "title": "Storybook/MDX",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/mdx-component.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
import { Meta, Story } from '@storybook/addon-docs/blocks';
import { Btn as Button } from './Button';
import { Toggle } from './Toggle';

<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"my-story\\" component={Toggle} />
      ",
      "stories": Array [
        "storybook-mdx--my-story",
      ],
      "title": "Storybook/MDX",
    },
  },
  "stories": Object {
    "storybook-mdx--my-story": Object {
      "attributes": Object {
        "component": Object {
          "Toggle": "Toggle",
        },
        "name": "my-story",
      },
      "id": "storybook-mdx--my-story",
      "kind": "Storybook/MDX",
      "loc": Object {
        "end": Object {
          "column": 50,
          "line": 23,
        },
        "start": Object {
          "column": 6,
          "line": 23,
        },
      },
      "name": "my-story",
      "source": "<Story name=\\"my-story\\" component={Toggle} />",
    },
  },
}
`;
